02-istio/deploy-nginx.yaml
---
# Source: nginx/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http-8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nginx
---
# Source: nginx/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
    spec:
      serviceAccountName: nginx
      securityContext:
        {}
      containers:
        - name: nginx
          securityContext:
            {}
          image: "registry.redhat.io/ubi8/nginx-118"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-8080
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http-8080
          readinessProbe:
            httpGet:
              path: /
              port: http-8080
          resources:
            {}
---
# Source: nginx/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: http
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
