02-istio/istio-config-nodeport.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gw
spec:
  selector:
    app: nodeport-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "nginx-nodeport.apps.ai-bm-demo.clustership.com"
    - "192.168.70.14"
    - "192.168.70.13"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: nginx
